k8s/03-ms-central.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-central
  namespace: agroflow
  labels:
    app: ms-central
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-central
  template:
    metadata:
      labels:
        app: ms-central
    spec:
      containers:
      - name: ms-central
        image: agroflow-ms-central:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ms-central-svc
  namespace: agroflow
spec:
  selector:
    app: ms-central
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
