k8s/04-ms-inventario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-inventario
  namespace: agroflow
  labels:
    app: ms-inventario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-inventario
  template:
    metadata:
      labels:
        app: ms-inventario
    spec:
      containers:
      - name: ms-inventario
        image: agroflow-ms-inventario:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ms-inventario-svc
  namespace: agroflow
spec:
  selector:
    app: ms-inventario
  ports:
  - port: 8082
    targetPort: 8082
  type: ClusterIP
