k8s/05-ms-facturacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-facturacion
  namespace: agroflow
  labels:
    app: ms-facturacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-facturacion
  template:
    metadata:
      labels:
        app: ms-facturacion
    spec:
      containers:
      - name: ms-facturacion
        image: agroflow-ms-facturacion:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: ms-facturacion-svc
  namespace: agroflow
spec:
  selector:
    app: ms-facturacion
  ports:
  - port: 8083
    targetPort: 8083
  type: ClusterIP
